--- a/tuitionplan.css
+++ b/tuitionplan.css
@@ -55,6 +55,9 @@
    color: white;
 }
 
+.tuition-plan{
+   margin-bottom: 15px ;
+}
 
 .tuitionplans {
    display: grid;
@@ -74,7 +77,7 @@
    height: 125px;
    width: auto;
    position: absolute;
-   top: 39%;
+   top: 33%;
    right: 32%;
 
 }
@@ -84,13 +87,13 @@
    width: auto;
    position: absolute;
    right: 32%;
-   top: 46.5%;
+   top: 40.6%;
 }
 
 .hsmostpopular{ height: 125px;
    width: auto;
    position: absolute;
-   top: 37%;
+   top: 32%;
    right: 32%;
 }
 
@@ -125,13 +128,13 @@
 .tuitiondescrip {
    padding: 25px;
    margin-left: 25px;
-   height: 300px;
+   height: 350px;
 }
 
 .tuitiondescriphs {
    padding: 25px;
    margin-left: 25px;   
-   height: 350px;
+   height: 375px;
 }
 
 
@@ -297,4 +300,33 @@
    font-weight: 600;
    text-align: center;
    margin-bottom: 12px;
+}
+
+
+.registrationcard table {
+   width: 100%;
+    margin-bottom: 0;
+   border-spacing: 0;
+   border-collapse: collapse;
+}
+
+
+.registrationcard th {
+   background: transparent;
+   font-family: var(--font-heading);
+   color: var(--bg-blue);
+   margin: 0;
+   padding: 10px 0 0 0;
+   border: none;
+   text-align: left;
+   text-shadow: none;
+  width:33%;
+}
+
+.registrationcard td {
+   padding: 0px;
+   border: none;
+   color: #1d428a;
+   font-size: 14px;
+   font-weight: 600;
 }
